# scout-analytics-clean

./: .env.local  VERCEL_DEPLOY_TRIGGER.txt  package-lock.json  package.json
.github/: DISABLE_SCHEMA_SYNC.md
InsightPulseAI_SKR/: E2B_INTEGRATION_STATUS.md  READY_TO_DEPLOY.md
InsightPulseAI_SKR/agents/: microvm_host.yaml
InsightPulseAI_SKR/agents/hawk/: task_planner.yaml  vision_driver.yaml
InsightPulseAI_SKR/agents/plugins/: e2b_sandbox.py
InsightPulseAI_SKR/config/: sandbox_policy.yaml
InsightPulseAI_SKR/docs/agent_inventory/: README.md  agent_index.yaml
InsightPulseAI_SKR/tools/hawk/: build_prompt_vault.py  e2b_monitoring.py  generate_image_digests.sh  pulser_integrity.manifest.template
InsightPulseAI_SKR/tools/hawk-ui/: README.md
InsightPulseAI_SKR/tools/js/mcp/: README.md  (+55 more)
InsightPulseAI_SKR/tools/python/hawk-sdk/: E2B_SETUP_GUIDE.md  README.md  pyproject.toml  run_e2b_sequence.sh  setup.py  test_e2b_verification.py
InsightPulseAI_SKR/tools/python/hawk-sdk/hawk/: __init__.py  session.py  version.py
InsightPulseAI_SKR/tools/python/hawk-sdk/hawk/agents/: __init__.py  task_planner.py  vision_driver.py
InsightPulseAI_SKR/tools/python/hawk-sdk/hawk/automation/: __init__.py  motor.py  planner.py
InsightPulseAI_SKR/tools/python/hawk-sdk/hawk/integrations/: __init__.py  openmanus_client.py  prompt_vault_client.py
InsightPulseAI_SKR/tools/python/hawk-sdk/hawk/schemas/: __init__.py  models.py
InsightPulseAI_SKR/tools/python/hawk-sdk/hawk/utils/: __init__.py  e2b_sandbox.py  monitoring.py  sandbox.py
InsightPulseAI_SKR/tools/python/hawk-sdk/hawk/vision/: __init__.py  capture.py  detector.py  driver.py
Suki-intel/scout-platform-v5/: .env.production  README.md  next.config.js  package.json  vercel.json
Suki-intel/scout-platform-v5/app/: page.tsx
Suki-intel/scout-platform-v5/components/: RAGChatUI.tsx  ScoutDashboard.tsx
Suki-intel/scout-platform-v5/lib/: supabase.ts
Suki-intel/scout-platform-v5/scripts/: extend-schema.ts  patch-components.ts
adsbot-deployment/adsbot-dashboard/: .env.local
adsbot-deployment/adsbot-dashboard/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  trace
agents/keykey/: agent.yaml
api/: package-lock.json  package.json  server.js
api/config/: database.js  keyVault.js
api/controllers/: authController.js  kpiController.js  scoutController.js
api/middleware/: auth.js
api/routes/: auth.js  kpi.js  schema.ts  scout.js
api/schema/: apply-migration.ts  fk-integrity.ts  sync.ts
enrichment_engine/: README.md  agent_enrichment_pipeline.yaml  agent_export_to_pdf.yaml  agent_format_perplexity_refs.yaml  agent_gagambi_enrich.yaml  agent_verify_source_ids.yaml  benchmarks.yaml  enhanced_insights.json  export_insights_to_pdf.py  export_insights_to_pdf_simple.py  format_perplexity_refs.py  open_mcp_scraper.py  run_enrichment_pipeline.sh  verify_source_ids.py
enrichment_engine/results/: clean_insights.json  insights_clean.json  insights_perplexity.md  insights_raw.json  raw_insights.json  sample_insights.json  source_verification_report.json
enrichment_engine/ui/data-enricher/: create-pwa-icons.html  generate-icons.js  package.json  tailwind.config.js
enrichment_engine/ui/pointer-clone/: package.json  tailwind.config.js
gagambi-backend/: .env.example  .env.render  .gitignore  Dockerfile  Dockerfile.render  README.md  alembic.ini  create_retail_schema.py  deploy-mysql-vm.sh  docker-compose.yml  init_db.py  render.yaml  requirements.txt  start-render.sh  start.sh
gagambi-backend/app/: main.py
gagambi-backend/app/api/: deps.py
gagambi-backend/app/core/: config.py  security.py
gagambi-backend/app/crud/: retail.py  user.py
gagambi-backend/app/db/: base.py
gagambi-backend/app/models/: retail.py  user.py
gagambi-backend/app/schemas/: retail.py  user.py
gagambi-frontend/: package-lock.json  package.json
gagambi-frontend/src/api/: gagambi.js
gagambi-frontend/src/pages/: Dashboard.jsx
pulser-sdk-packages/: DEVTOOLS_INTEGRATION.md  PUBLISHING_GUIDE.md  README.md
pulser-sdk-packages/.github/workflows/: publish-npm.yml  publish-pypi.yml
pulser-sdk-packages/javascript/: .npmrc  README.md  package.json  tsconfig.json
pulser-sdk-packages/python/: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
pulser-sdk-packages/python/src/pulser_sdk/: __init__.py  config.py  devtools.py
scout-analytics-clean/: package-lock.json  package.json  vite.config.ts
scout-analytics-clean/server/: index.js
scout-analytics-clean/src/: index.css  main.tsx
src/lib/: supabase.ts
src/services/: dataAlignment.ts
src/types/: next.d.ts
src/utils/: memory.ts
(+279 files in other folders)
